--- a/src/template.html
+++ b/src/template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,5 @@
   </head>
   <body class="">
     <h1>yo whatup</h1>
-    
-    </script>
   </body>
 </html>
