--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body class="antialiased">
-    <h1>yo whatup</h1>
+  <body class="bg-gray-100 antialiased">
+    <h1 class="text-center text-4xl font-bold text-blue-500">Hello world!</h1>
   </body>
 </html>
