--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,56 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body class="bg-gray-100 antialiased">
+  <body
+    class="bg-gray-100 antialiased selection:bg-sky-300 selection:text-white"
+  >
     <h1 class="text-center text-4xl font-bold text-blue-500">Hello world!</h1>
+    <div class="mt-4 space-x-1 space-x-1 sm:mt-6">
+      <a
+        class="btn btn-primary transform shadow-lg transition hover:-translate-y-0.5"
+        href="#"
+        >Book your escape</a
+      >
+      <a class="btn btn-secondary" href="#">Learn more</a>
+    </div>
+    <!-- INPUTS -->
+    <div class="grid min-h-screen place-items-center">
+      <h1>inputs</h1>
+      <div class="mx-auto w-full max-w-md px-8">
+        <form class="space-y-10">
+          <div>
+            <label
+              for="first-name"
+              class="ml-4 block text-sm font-medium leading-6 text-slate-900"
+              >First name</label
+            >
+            <input
+              type="text"
+              id="first-name"
+              name="first-name"
+              class="mt-1 w-full rounded-full bg-slate-100 px-4 py-2 text-sm leading-6 text-slate-700 focus:outline-violet-500"
+            />
+          </div>
+          <!--  -->
+          <div>
+            <label
+              for="last-name"
+              class="ml-4 block text-sm font-medium leading-6 text-slate-900"
+              >Last name</label
+            >
+            <input
+              type="text"
+              id="last-name"
+              name="last-name"
+              class="mt-1 w-full rounded-full bg-slate-100 px-4 py-2 text-sm leading-6 text-slate-700 focus:outline-violet-500"
+            />
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
