--- a/src/template.html
+++ b/src/template.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body
-    class="bg-gray-100 antialiased selection:bg-sky-300 selection:text-white"
-  >
+  <body class="">
     <h1 class="text-center text-4xl font-bold text-blue-500">Hello world!</h1>
     <div class="mt-4 space-x-1 space-x-1 sm:mt-6">
       <a
