--- a/src/services.html
+++ b/src/services.html
@@ -125,7 +125,7 @@
       <div class="backface-hidden bg-gray-800 sm:w-full">
         <img src="./images/1.jpg" alt="me" class="" />
       </div>
-      <h1 class="pt-52 text-3xl font-bold">About Page</h1>
+      <h1 class="pt-52 text-3xl font-bold">Services Page</h1>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque magnam, corporis harum aspernatur tempora unde doloribus nisi officia, ratione, quas cupiditate eaque error rerum molestias earum voluptates voluptate suscipit maxime.lorem200
    tus omnis laborum molestiae, atque odio quasi, laboriosam vel dicta quam sint eaque in optio? Accusantium totam maxime sint reprehenderit possimus nostrum, quo rerum magni suscipit recusandae necessitatibus aliquam! Hic esse unde repellat quaerat saepe, laudantium iste ab? Repellat alias eum impedit commodi?
       </div>
